# substrate-subxt

./: Cargo.toml  README.md
cli/: Cargo.toml
client/: Cargo.toml
codegen/: Cargo.toml
examples/: Cargo.toml
metadata/: Cargo.toml
proc-macro/: Cargo.toml
src/: lib.rs  subscription.rs
subxt/: Cargo.toml
testing/integration-tests/: Cargo.toml
testing/test-runtime/: Cargo.toml
testing/ui-tests/: Cargo.toml
