[package]
name = "test-runtime"
version = "0.24.0"
edition = "2021"

[dependencies]
subxt = { path = "../../subxt" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/chainflip-io/substrate.git'
tag = 'chainflip-monthly-2022-06+01'

[build-dependencies]
subxt = { path = "../../subxt" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
which = "4.2.2"
jsonrpsee = { version = "0.15.1", features = ["async-client", "client-ws-transport"] }

[build-dependencies.sp-core]
default-features = false
git = 'https://github.com/chainflip-io/substrate.git'
tag = 'chainflip-monthly-2022-06+01'

